# gnostr-tig

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Cargo.toml  GNUmakefile  Makefile  NEWS.adoc  README.md  build.rs  cargo.mk  config.h  default.nix  gnostr-nip  install  libsecp256k1.mk  nip-0034  nix.mk  nostril.c  nostril.mk  script.sh  shell.nix  tig.c  xcode.mk
.cargo/: config.toml
.github/workflows/: build-install-matrix.yml  c-cpp.yml  ci.yml  docker.yml  gnostr-docker.yml  macos-build-artifacts.yml  macos-matrix.yml  macos-pre-release.yml  macos-release.yml  release.yml  ubuntu-build-artifacts.yml  ubuntu-matrix.yml  ubuntu-pre-release.yml  ubuntu-release.yml
doc/: nostril.1  tig.1.adoc
docs/: README.md.css.html  README.md.html  README.md.txt
ext/: secp256k1
include/tig/: string.h  tig.h
src/: argv.c  copyx.c  diff.c  main.c  main.rs  nostril.c  options.c  pager.c  parse.c  sha256.c  simple.c
test/tools/: libtest.sh
wix/: main.wxs
xcode/CMakeScripts/: ReRunCMake.make
xcode/nostril.xcodeproj/: project.pbxproj
