[package]
name = "nostril"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-xcode = { git = "https://gitlab.com/RandyMcMillan/cargo-xcode.git", version = "1.10.0" }
libc = "0.2.153"
nostr = { version = "0.32.1", features = ["alloc", "nip03"] }
structopt = "0.3.26"

[build-dependencies]
cc = "1.0"
