[package]
name = "gnostr"
version = "0.0.57"
edition = "2021"
repository = "https://github.com/gnostr-org/gnostr.git"
homepage = "https://github.com/gnostr-org/gnostr.git"
documentation = "https://github.com/gnostr-org/gnostr.git"
description = "gnostr: git+nostr workflow utility"

[dependencies]
## no versioning for gnostr-bins
## we want to detect breaking changes quickly
gnostr-bins = { git = "https://github.com/gnostr-org/gnostr-bins.git" }
sha256 = "1.2.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "randymcmillan/homebrew-randymcmillan"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
